--- a/LucimarCorretora/index.html
+++ b/LucimarCorretora/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Star Web - Lucimar Corretora</title>
-  <link rel="icon" href="img/favicon.png" type="image/png">
+  <link rel="icon" href="../img/favicon.png" type="image/png">
   <link rel="stylesheet" href="css/style.css?v=3" />
   <link rel="stylesheet" href="css/mobile.css?v=3" media="(max-width: 768px)" />
 
@@ -97,7 +97,7 @@
   <!-- Header com menu e logo -->
   <header>
     <div class="container">
-      <img src="img/logo.png?v=1" alt="Logo" class="logo" />
+      <img src="../img/logo.png?v=1" alt="Logo" class="logo" />
 
       <div class="right-group">
         <nav class="menu" role="navigation" aria-label="Menu principal">
