--- a/LucimarCorretora/index.html
+++ b/LucimarCorretora/index.html
@@ -97,7 +97,7 @@
   <!-- Header com menu e logo -->
   <header>
     <div class="container">
-      <img src="../img/logo.png?v=1" alt="Logo" class="logo" />
+     <img src="../img/logo.png?v=1" alt="Logo" class="logo" /> 
 
       <div class="right-group">
         <nav class="menu" role="navigation" aria-label="Menu principal">
@@ -137,15 +137,15 @@
   <!-- Área principal com imagens clicáveis -->
   <main>
     <section class="fotosnovidade">
-      <a href="./cadastro.html" class="foto-item">
+      <a href="./html/conheca.html" class="foto-item">
         <img src="img/lucimar.jpg" alt="Cadastro" />
         <h3>Conheça sua Corretora!</h3>
       </a>
-      <a href="fotos.html" class="foto-item">
+      <a href="./html/imoveis.html" class="foto-item">
         <img src="img/imoveis.jpg" alt="Galeria de Fotos" />
         <h3>Imóveis Disponíveis</h3>
       </a>
-      <a href="sobre.html" class="foto-item">
+      <a href="./html/contecomigo.html" class="foto-item">
         <img src="img/contecomigo.jpg" alt="Sobre o App" />
         <h3>Conte Comigo</h3>
       </a>
