--- a/LucimarCorretora/html/conheca.html
+++ b/LucimarCorretora/html/conheca.html
@@ -16,22 +16,27 @@
     }
 
     header {
-      background: #0a0f1a;
-      padding: 20px;
+      background-color: rgba(0,0,0,0.85);
+      padding: 15px 30px;
       display: flex;
-      align-items: center;
       justify-content: space-between;
+      align-items: center;
     }
 
-    header img {
+    header .logo {
       height: 50px;
     }
 
     header nav a {
-      color: #fff;
+      color: white;
+      font-size: 1rem;
       text-decoration: none;
       font-weight: bold;
-      font-size: 16px;
+      transition: color 0.3s ease;
+    }
+
+    header nav a:hover {
+      color: #4da6ff;
     }
 
   .section-historia {
@@ -105,13 +110,12 @@
   </style>
 </head>
 <body>
-  <header>
+<header>
    <!-- <img src="../../img/logo.png" alt="Logo" class="logo"> -->
-    <nav>
-      <a href="../index.html">Voltar para Principal</a>
-    </nav>
-  </header>
-
+  <nav>
+    <a href="../index.html">Voltar para Principal</a>
+  </nav>
+</header>
   <main>
   
     <!-- História parte 1 -->
