--- a/LucimarCorretora/html/imoveis.html
+++ b/LucimarCorretora/html/imoveis.html
@@ -17,18 +17,27 @@
     }
 
     header {
-      background: #0a0f1a;
-      padding: 20px;
+      background-color: rgba(0,0,0,0.85);
+      padding: 15px 30px;
       display: flex;
       justify-content: space-between;
       align-items: center;
     }
 
+    header .logo {
+      height: 50px;
+    }
+
     header nav a {
-      color: #fff;
+      color: white;
+      font-size: 1rem;
       text-decoration: none;
       font-weight: bold;
-      font-size: 16px;
+      transition: color 0.3s ease;
+    }
+
+    header nav a:hover {
+      color: #4da6ff;
     }
 
     main {
@@ -125,11 +134,12 @@
   </style>
 </head>
 <body>
-  <header>
-    <nav>
-      <a href="../index.html">Voltar para Principal</a>
-    </nav>
-  </header>
+<header>
+   <!-- <img src="../../img/logo.png" alt="Logo" class="logo"> -->
+  <nav>
+    <a href="../index.html">Voltar para Principal</a>
+  </nav>
+</header>
 
   <main>
     <h1>Imóveis Disponíveis</h1>
