--- a/LucimarCorretora/html/conheca.html
+++ b/LucimarCorretora/html/conheca.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Conheça sua Corretora - Lucimar</title>
-  <link rel="stylesheet" href="../../css/style.css" />
-  <link rel="stylesheet" href="../../css/mobile.css" media="(max-width: 768px)" />
+  <link rel="stylesheet" href="../css/style.css" />
+  <link rel="stylesheet" href="../css/mobile.css" media="(max-width: 768px)" />
 
   <style>
     body {
