--- a/LucimarCorretora/html/conheca.html
+++ b/LucimarCorretora/html/conheca.html
@@ -4,15 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Conheça sua Corretora - Lucimar</title>
-  <link rel="stylesheet" href="../css/style.css" />
-  <link rel="stylesheet" href="../css/mobile.css" media="(max-width: 768px)" />
-
+ <link rel="stylesheet" href="../css/style.css?v=3" />
+  <link rel="stylesheet" href="../css/mobile.css?v=3" media="(max-width: 768px)" />
   <style>
     body {
-      background-color: #101826;
+      background: #101826;
       color: #fff;
       font-family: Arial, sans-serif;
-      line-height: 1.6;
     }
 
     header {
@@ -39,74 +37,88 @@
       color: #4da6ff;
     }
 
-  .section-historia {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 40px;
-  padding: 60px 10%;
-  flex-wrap: wrap;
-}
+    .conte-comigo {
+      max-width: 1100px;
+      margin: 40px auto;
+      padding: 20px;
+      text-align: center;
+    }
 
-.section-historia .img-container {
-  width: 350px;       /* largura fixa do quadro */
-  height: 250px;      /* altura fixa do quadro */
-  flex-shrink: 0;     /* não permite encolher */
-  overflow: hidden;
-  border-radius: 12px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.5);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+    .conte-comigo h1 {
+      font-size: 2.2rem;
+      margin-bottom: 15px;
+      text-shadow: 2px 2px 8px rgba(0,0,0,0.7);
+    }
 
-.section-historia .img-container img {
-  width: 100%;
-  height: 100%;
-  object-fit: contain; /* mantém a imagem inteira */
-}
+    .conte-comigo p {
+      font-size: 1.2rem;
+      margin-bottom: 30px;
+      line-height: 1.6;
+      color: #ddd;
+    }
 
-.section-historia .texto {
-  flex: 1;
-  max-width: 500px;
-}
+    .motivos {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 25px;
+      margin-top: 30px;
+    }
 
-.section-historia h2 {
-  margin-bottom: 15px;
-  color: #f0c040;
-}
+    .motivo {
+      background: rgba(255, 255, 255, 0.08);
+      border-radius: 12px;
+      padding: 25px 20px;
+      text-align: center;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.3);
+      transition: transform 0.3s ease;
+    }
 
-/* Alternância de lado */
-.section-historia:nth-child(even) {
-  flex-direction: row-reverse;
-}
+    .motivo:hover {
+      transform: translateY(-6px);
+    }
 
-/* Responsividade */
-@media (max-width: 768px) {
-  .section-historia {
-    flex-direction: column !important;
-    gap: 20px;
-    padding: 40px 5%;
-  }
+    .motivo img {
+      width: 70px;
+      height: 70px;
+      margin-bottom: 15px;
+    }
 
-  .section-historia .img-container {
-    width: 100%;
-    height: auto; /* altura se ajusta ao conteúdo */
-  }
+    .motivo h3 {
+      margin-bottom: 10px;
+      color: #fff;
+    }
 
-  .section-historia .texto {
-    max-width: 100%;
-    text-align: center;
-  }
-}
+    .motivo p {
+      color: #ccc;
+      font-size: 0.95rem;
+    }
 
-	footer {
-	  background: #0a0f1a;
-	  text-align: center;
-	  padding: 20px;
-	  font-size: 14px;
-	  margin-top: 50px;
-	}
+    .cta-final {
+      margin-top: 40px;
+    }
+
+    .cta-final a {
+      background-color: #25d366;
+      padding: 14px 35px;
+      border-radius: 8px;
+      color: #fff;
+      font-size: 1.2rem;
+      font-weight: bold;
+      text-decoration: none;
+      transition: background-color 0.3s ease;
+    }
+
+    .cta-final a:hover {
+      background-color: #20b954;
+    }
+
+    footer {
+      margin-top: 50px;
+      background: #000;
+      padding: 20px;
+      text-align: center;
+      color: #aaa;
+    }
   </style>
 </head>
 <body>
