--- a/LucimarCorretora/html/contecomigo.html
+++ b/LucimarCorretora/html/contecomigo.html
@@ -121,7 +121,7 @@
     }
   </style>
 </head>
-<body>
+<body class="header-preto">
   <!-- Header -->
 <header>
    <!-- <img src="../../img/logo.png" alt="Logo" class="logo"> -->
