--- a/LucimarCorretora/html/imoveis.html
+++ b/LucimarCorretora/html/imoveis.html
@@ -4,13 +4,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Imóveis Disponíveis - Lucimar Corretora</title>
- <link rel="stylesheet" href="../css/style.css?v=3" />
-  <link rel="stylesheet" href="../css/mobile.css?v=3" media="(max-width: 768px)" />
+  <link rel="stylesheet" href="../css/style.css" />
+  <link rel="stylesheet" href="../css/mobile.css" media="(max-width: 768px)" />
+
   <style>
     body {
-      background: #101826;
+      background-color: #101826;
       color: #fff;
       font-family: Arial, sans-serif;
+      line-height: 1.6;
+      margin: 0;
     }
 
     header {
@@ -37,91 +40,100 @@
       color: #4da6ff;
     }
 
-    .conte-comigo {
-      max-width: 1100px;
+    main {
+      max-width: 1200px;
       margin: 40px auto;
-      padding: 20px;
+      padding: 0 20px;
+    }
+
+    h1 {
       text-align: center;
+      color: #f0c040;
+      margin-bottom: 40px;
     }
 
-    .conte-comigo h1 {
-      font-size: 2.2rem;
-      margin-bottom: 15px;
-      text-shadow: 2px 2px 8px rgba(0,0,0,0.7);
-    }
-
-    .conte-comigo p {
-      font-size: 1.2rem;
-      margin-bottom: 30px;
-      line-height: 1.6;
-      color: #ddd;
-    }
-
-    .motivos {
+    .imoveis-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 25px;
-      margin-top: 30px;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 30px;
     }
 
-    .motivo {
-      background: rgba(255, 255, 255, 0.08);
+    .imovel-card {
+      background: #0a0f1a;
       border-radius: 12px;
-      padding: 25px 20px;
-      text-align: center;
-      box-shadow: 0 6px 18px rgba(0,0,0,0.3);
+      overflow: hidden;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.5);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .imovel-card img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
       transition: transform 0.3s ease;
     }
 
-    .motivo:hover {
-      transform: translateY(-6px);
+    .imovel-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 8px 18px rgba(0,0,0,0.6);
     }
 
-    .motivo img {
-      width: 70px;
-      height: 70px;
-      margin-bottom: 15px;
+    .imovel-card:hover img {
+      transform: scale(1.05);
     }
 
-    .motivo h3 {
+    .imovel-card .detalhes {
+      padding: 15px;
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+
+    .imovel-card .detalhes h2 {
+      color: #f0c040;
       margin-bottom: 10px;
-      color: #fff;
+      font-size: 1.3rem;
     }
 
-    .motivo p {
-      color: #ccc;
+    .imovel-card .detalhes p {
+      margin-bottom: 10px;
       font-size: 0.95rem;
     }
 
-    .cta-final {
-      margin-top: 40px;
-    }
-
-    .cta-final a {
-      background-color: #25d366;
-      padding: 14px 35px;
-      border-radius: 8px;
+    .btn-contato {
+      display: inline-block;
+      padding: 10px 20px;
+      background-color: #ff4500;
       color: #fff;
-      font-size: 1.2rem;
       font-weight: bold;
       text-decoration: none;
+      border-radius: 6px;
       transition: background-color 0.3s ease;
-    }
-
-    .cta-final a:hover {
-      background-color: #20b954;
-    }
-
-    footer {
-      margin-top: 50px;
-      background: #000;
-      padding: 20px;
       text-align: center;
-      color: #aaa;
+    }
+
+    .btn-contato:hover {
+      background-color: #e03e00;
+    }
+
+    /* Responsividade */
+    @media(max-width: 1024px) {
+      .imoveis-grid {
+        grid-template-columns: repeat(2, 1fr);
+      }
+    }
+
+    @media(max-width: 768px) {
+      .imoveis-grid {
+        grid-template-columns: 1fr;
+      }
     }
   </style>
 </head>
-<body>
+<body class="header-preto">
 <header>
    <!-- <img src="../../img/logo.png" alt="Logo" class="logo"> -->
   <nav>
