--- a/Clientes/LucimarCorretora/index.html
+++ b/Clientes/LucimarCorretora/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Star Web - Lucimar Corretora</title>
-  <link rel="icon" href="../img/favicon.png" type="image/png">
+  <link rel="icon" href="img/favicon.png" type="image/png">
   <link rel="stylesheet" href="css/style.css?v=3" />
   <link rel="stylesheet" href="css/mobile.css?v=3" media="(max-width: 768px)" />
 
@@ -97,7 +97,7 @@
   <!-- Header com menu e logo -->
   <header>
     <div class="container">
-     <img src="../img/logo.png?v=1" alt="Logo" class="logo" /> 
+      <img src="img/logo.png?v=1" alt="Logo" class="logo" /> 
 
       <div class="right-group">
         <nav class="menu" role="navigation" aria-label="Menu principal">
@@ -129,67 +129,4 @@
   <section class="banner-corretora">
     <img src="img/LucimarCorretora.jpeg" alt="Foto da Corretora" />
     <div class="conteudo-corretora">
-      <h1>Lucimar Pereira</h1>
-      <p>Corretora de imóveis com mais de 10 anos de experiência, ajudando pessoas a realizarem o sonho da casa própria.</p>
-    </div>
-  </section>
-
-  <!-- Área principal com imagens clicáveis -->
-  <main>
-    <section class="fotosnovidade">
-      <a href="./html/conheca.html" class="foto-item">
-        <img src="img/lucimar.jpg" alt="Cadastro" />
-        <h3>Conheça sua Corretora!</h3>
-      </a>
-      <a href="./html/imoveis.html" class="foto-item">
-        <img src="img/imoveis.jpg" alt="Galeria de Fotos" />
-        <h3>Imóveis Disponíveis</h3>
-      </a>
-      <a href="./html/contecomigo.html" class="foto-item">
-        <img src="img/contecomigo.jpg" alt="Sobre o App" />
-        <h3>Conte Comigo</h3>
-      </a>
-      <a href="sobre.html" class="foto-item">
-        <img src="img/dicas.jpg" alt="Dicas e Novidades" />
-        <h3>Dicas e Novidades!</h3>
-      </a>
-    </section>
-
-    <!-- Botão flutuante WhatsApp -->
-    <a href="https://wa.me/5562999999999" class="whatsapp-float" target="_blank" aria-label="Fale conosco no WhatsApp">
-      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/whatsapp.svg" alt="WhatsApp" />
-    </a>
-  </main>
-
-  <!-- Rodapé com links -->
-  <footer>
-    <p>&copy; 2025. Todos os direitos reservados.</p>
-    <p>Desenvolvido por <strong>StarWeb System</strong></p>
-    <p>
-      <a href="./politica.html">Política de Privacidade</a> |
-      <a href="./termouso.html">Termo de Uso</a>
-    </p>
-  </footer>
-
-  <!-- JS para menu mobile -->
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      const toggle = document.querySelector(".menu-toggle");
-      const closeBtn = document.querySelector(".menu-close");
-      const menu = document.querySelector(".menu");
-
-      toggle.addEventListener("click", () => {
-        menu.classList.add("active");
-      });
-
-      closeBtn.addEventListener("click", () => {
-        menu.classList.remove("active");
-      });
-    });
-  </script>
-
-  <!-- Slider exclusivo da corretora -->
-  <script src="./js/sliderLucimar.js"></script>
-
-</body>
-</html>
+      <h1>Lucimar Pereira<
