--- a/modelo/index.html
+++ b/modelo/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Star Web - Lucimar Corretora</title>
+  <title>Star Web - Modelo</title>
   <link rel="icon" href="../img/favicon.png" type="image/png">
   <link rel="stylesheet" href="css/style.css?v=3" />
   <link rel="stylesheet" href="css/mobile.css?v=3" media="(max-width: 768px)" />
@@ -115,22 +115,22 @@
 
   <!-- Banner destaque com troca automática de imagens -->
   <section class="banner-destaque" 
-           data-imagens="img/bannerdestaque1.jpg,img/bannerdestaque2.jpg,img/LucimarCorretora.jpeg">
+           data-imagens="img/bannerdestaque1.jpg,img/bannerdestaque2.jpg,img/modelo.jpeg">
     <div class="conteudo-banner">
       <h1>Encontre o imóvel dos seus sonhos</h1>
-      <p>Com Lucimar Pereira, sua corretora de confiança</p>
+      <p>Com nosso corretor de confiança</p>
     </div>
     <a href="html/saibamais.html">
       <button class="btn-saiba-mais">Saiba Mais</button>
     </a>
   </section>
 
-  <!-- Banner da corretora -->
+  <!-- Banner do cliente -->
   <section class="banner-corretora">
-    <img src="img/LucimarCorretora.jpeg" alt="Foto da Corretora" />
+    <img src="img/modelo.jpeg" alt="Foto do Cliente" />
     <div class="conteudo-corretora">
-      <h1>Lucimar Pereira</h1>
-      <p>Corretora de imóveis com mais de 10 anos de experiência, ajudando pessoas a realizarem o sonho da casa própria.</p>
+      <h1>Modelo</h1>
+      <p>Corretor(a) de imóveis pronto(a) para ajudar você a realizar o sonho da casa própria.</p>
     </div>
   </section>
 
@@ -138,8 +138,8 @@
   <main>
     <section class="fotosnovidade">
       <a href="./html/conheca.html" class="foto-item">
-        <img src="img/lucimar.jpg" alt="Cadastro" />
-        <h3>Conheça sua Corretora!</h3>
+        <img src="img/modelo.jpg" alt="Cadastro" />
+        <h3>Conheça seu Corretor!</h3>
       </a>
       <a href="./html/imoveis.html" class="foto-item">
         <img src="img/imoveis.jpg" alt="Galeria de Fotos" />
@@ -188,8 +188,8 @@
     });
   </script>
 
-  <!-- Slider exclusivo da corretora -->
-  <script src="./js/sliderLucimar.js"></script>
+  <!-- Slider exclusivo do cliente -->
+  <script src="./js/sliderModelo.js"></script>
 
 </body>
 </html>
