ajustes feitos para melhorias

--- a/Clientes/LucimarCorretora/index.html
+++ b/Clientes/LucimarCorretora/index.html
@@ -125,7 +125,7 @@
 
   <!-- Banner da corretora -->
   <section class="banner-corretora">
-    <img src="img/LucimarCorretora.jpeg" alt="Foto da Corretora" />
+    <img src="../img/LucimarCorretora.jpeg" alt="Foto da Corretora" />
     <div class="conteudo-corretora">
       <h1>Lucimar Pereira</h1>
       <p>Corretora de imóveis com mais de 10 anos de experiência, ajudando pessoas a realizarem o sonho da casa própria.</p>
