ajuste no cadastro

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </section>
 
     <section class="fotosnovidade">
-      <a href="./cadastro.html" class="foto-item">
+      <a href="html/infoclone.html" class="foto-item">
         <img src="img/cadastro.jpg" alt="Cadastro" />
         <h3> Faça seu Clone!</h3>
    
