criação da pasta correta

--- a/Clientes/LucimarCorretora/index.html
+++ b/Clientes/LucimarCorretora/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Star Web - Lucimar Corretora</title>
-  <link rel="icon" href="img/favicon.png" type="image/png">
+  <link rel="icon" href="../img/favicon.png" type="image/png">
   <link rel="stylesheet" href="css/style.css?v=3" />
   <link rel="stylesheet" href="css/mobile.css?v=3" media="(max-width: 768px)" />
 
@@ -97,7 +97,7 @@
   <!-- Header com menu e logo -->
   <header>
     <div class="container">
-      <img src="img/logo.png?v=1" alt="Logo" class="logo" />
+      <img src="img/logo.png" alt="Logo" class="logo" />
       <div class="right-group">
         <nav class="menu" role="navigation" aria-label="Menu principal">
           <ul>
@@ -113,7 +113,7 @@
 
   <!-- Banner destaque com troca automática de imagens -->
   <section class="banner-destaque" 
-           data-imagens="img/bannerdestaque1.jpg,img/bannerdestaque2.jpg,img/LucimarCorretora.jpeg">
+           data-imagens="img/bannerdestaque1.jpg,img/bannerdestaque2.jpg,img/bannerdestaque3.jpeg">
     <div class="conteudo-banner">
       <h1>Encontre o imóvel dos seus sonhos</h1>
       <p>Com Lucimar Pereira, sua corretora de confiança</p>
@@ -125,7 +125,7 @@
 
   <!-- Banner da corretora -->
   <section class="banner-corretora">
-    <img src="../img/LucimarCorretora.jpeg" alt="Foto da Corretora" />
+    <img src="img/modelo.jpeg" alt="Foto da Corretora" />
     <div class="conteudo-corretora">
       <h1>Lucimar Pereira</h1>
       <p>Corretora de imóveis com mais de 10 anos de experiência, ajudando pessoas a realizarem o sonho da casa própria.</p>
@@ -136,7 +136,7 @@
   <main>
     <section class="fotosnovidade">
       <a href="./html/conheca.html" class="foto-item">
-        <img src="img/lucimar.jpg" alt="Cadastro" />
+        <img src="img/modelo.jpg" alt="Cadastro" />
         <h3>Conheça sua Corretora!</h3>
       </a>
       <a href="./html/imoveis.html" class="foto-item">
